--- a/index.html
+++ b/index.html
@@ -65,11 +65,18 @@
     }
 
     async function getFriendship() {
+      const friend = await liff.getFriendship()
+      document.getElementById("friendship").append(friend.friendFlag)
+      if (!friend.friendFlag){
+        if (confirm("คุณยังไม่ได้เพิ่ม Bot เป็นเพื่อน จะเพิ่มเลยไหม?")) {
+          window.location = "https://line.me/R/ti/p/@YOUR-BOT-ID"
+        }
+      }
     }
 
     async function sendMsg() {
       if (liff.getContext().type !== "none") {
-        await liff.sendMessages([
+        await liff.sendMessages([ //max 5 bubbles
           {
             "type": "sticker",
             "stickerId": 1,
@@ -117,7 +124,7 @@
       getEnvironment()
       getUserProfile()
       getContext()
-      // getFriendship()
+      getFriendship()
       // createUniversalLink()
     }
     main()
