--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     }
 
     async function main() {
-      alert("LINE Developers x Skooldio")
+      // alert("LINE Developers x Skooldio")
       await liff.init({ liffId: "1654192509-20Q10qea" })
       getEnvironment()
       getUserProfile()
