--- a/index.html
+++ b/index.html
@@ -59,15 +59,21 @@
     }
 
     async function scanCode() {
+      const result = await liff.scanCode()
+      document.getElementById("scanCode").append(result.value)
     }
 
     function openWindow() {
+      liff.openWindow({
+        url: "https://line.me",
+        external: true
+      })
     }
 
-    async function getFriendship() {
+    async function getFriendship() { // chat bot
       const friend = await liff.getFriendship()
       document.getElementById("friendship").append(friend.friendFlag)
-      if (!friend.friendFlag){
+      if (!friend.friendFlag) {
         if (confirm("คุณยังไม่ได้เพิ่ม Bot เป็นเพื่อน จะเพิ่มเลยไหม?")) {
           window.location = "https://line.me/R/ti/p/@YOUR-BOT-ID"
         }
